--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="hsl(0, 0%, 7%)" />
     <title>Reindeer - AI-Powered Database Management</title>
-    <meta name="description" content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI." />
+    <meta
+      name="description"
+      content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI."
+    />
     <meta name="author" content="Reindeer" />
 
-    <meta property="og:title" content="Reindeer - AI-Powered Database Management" />
-    <meta property="og:description" content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI." />
+    <meta
+      property="og:title"
+      content="Reindeer - AI-Powered Database Management"
+    />
+    <meta
+      property="og:description"
+      content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+    <style>
+      html,
+      body,
+      #root {
+        background-color: hsl(0, 0%, 7%);
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
 
   <body>
