--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="hsl(0, 0%, 7%)" />
+    <link rel="icon" type="image/png" href="/reindeer-favicon.png" />
     <title>Reindeer - AI-Powered Database Management</title>
     <meta
       name="description"
