feat: update website metadata and branding

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta
       property="og:title"
-      content="Reindeer - AI-Powered Database Management"
+      content="Reindeer - Cursor for Databases"
     />
     <meta
       property="og:description"
@@ -31,14 +31,14 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://tryreindeer.com/reindeer-interface.png"
+      content="https://tryreindeer.com/image.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@reindeer" />
     <meta
       name="twitter:image"
-      content="https://tryreindeer.com/reindeer-interface.png"
+      content="https://tryreindeer.com/image.png"
     />
     <style>
       html,
