--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="hsl(0, 0%, 7%)" />
     <link rel="icon" type="image/png" href="/reindeer-favicon.png" />
-    <title>Reindeer - AI-Powered Database Management</title>
+    <title>Reinder - Cursor for databases</title>
     <meta
       name="description"
-      content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI."
+      content="Built to make you extraordinarily productive."
     />
     <meta name="author" content="Reindeer" />
 
@@ -26,7 +26,7 @@
     />
     <meta
       property="og:description"
-      content="Built to make you extraordinarily productive, Reindeer is the best way to manage databases with AI."
+      content="Built to make you extraordinarily productive."
     />
     <meta property="og:type" content="website" />
     <meta
